# codepod

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-pages.yml
docs/guides/: creating-commands.md  extensions.md  python-sdk.md  security.md  shell-reference.md  syscalls.md  typescript-sdk.md
docs/plans/: 2026-02-25-conformance-tests-design.md
docs/plans/archive/: 2026-02-24-compat-security-design.md  2026-02-25-mcp-server-design.md  2026-02-25-mcp-server-plan.md  2026-02-25-package-system-plan.md
docs/superpowers/plans/: 2026-03-13-numpy-refactor.md  2026-03-18-wasi-host-posix-extensions.md  2026-03-23-llm-demo.md  2026-03-30-wasmtime-migration.md
docs/superpowers/specs/: 2026-03-13-numpy-refactor-design.md  2026-03-18-sandbox-pooling-design.md  2026-03-18-wasi-host-posix-extensions-design.md  2026-03-26-lean-binary-native-bridge-design.md  2026-03-26-package-registry-design.md  2026-03-30-wasmtime-migration-design.md
examples/llm/: README.md  deno.json  index.html  tsconfig.json  vite.config.ts
examples/llm/public/: coi-serviceworker.js
examples/llm/src/: chat-cli.ts  chat.test.ts  chat.ts  llm.ts  parse.test.ts  parse.ts  prompts.ts  sandbox.test.ts  sandbox.ts  types.ts
examples/llm/src/components/: Chat.tsx  ModelLoader.tsx
examples/web-cli/: copy-wasm.sh  package.json  vite.config.ts
scripts/: build-coreutils.sh  build-mcp.sh  build-sdk-server.sh  copy-wasm.sh  dev-init.sh  smoke-test-mcp.sh
