[workspace]
members = [
  "packages/shell",
  "packages/coreutils",
  "packages/test-fixtures/hello",
  "packages/test-fixtures/echo-args",
  "packages/test-fixtures/cat-stdin",
  "packages/test-fixtures/wc-bytes",
  "packages/test-fixtures/true-cmd",
  "packages/test-fixtures/false-cmd",
  "packages/python",
]
resolver = "2"

[profile.release]
lto = true
opt-level = "z"
strip = true
